--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,10 @@ body {
     }
 }
 
+.player1-select, .player2-select {
+    display: flex;
+}
+
 .life-bar {
     height: 10px;
     border: 1px solid #333;
@@ -81,4 +85,24 @@ body {
 .attack-button:hover {
     background-color: blue;
     box-shadow: 0 0 30px blue;
+}
+
+.button-new-game {
+    display: flex;
+    border: 1px solid blue;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    width: 200px;
+    transition: 0.5s linear;
+    border-radius: 20px;
+
+    > a {
+        padding: 10px;
+    }
+}
+
+.button-new-game:hover {
+    background-color: blue;
+    box-shadow: 0 0 20px blue;
 }
